# bairds_counterexample_comparison

./: README.md  main.py  pyproject.toml
src/: linear_approximation.py  main.py  temporal_difference.py
